# Progsprachen2020G5

./: .env  .gitignore  README.md  markdown2PDF.sh
.github/workflows/: calculator.yml  programming_language.yml
calculator/: Cargo.toml  Dockerfile  README.md
calculator/src/: lib.rs  value.rs
calculator/src/operation_modes/: decimal_place_creation.rs  error.rs  execution.rs  list_construction.rs  mod.rs  whole_number_creation.rs
editor/: README.md  editor-static  package.yaml  stack.yaml
editor/app/: Main.hs
editor/src/: FileIO.hs  Lib.hs  Parser.hs  Utils.hs
editor/src/Curses/: Colors.hs  CursesFormatter.hs  CursesUtils.hs  EditorUtils.hs  Types.hs  UI.hs
programming_language/: README.md  interpreter.py  lexer.py  parser_exceptions.py  parser_structures.py  parsing.py  requirements.txt
programming_language/demo_programs/: complex_function.fprog  complex_function_without_parantheses.fprog  complex_records.fprog  complex_records_nested.fprog  simple_expression.fprog  simple_expression_cond.fprog  simple_function.fprog  simple_records.fprog
programming_language/tests/: test_functions.py  test_records.py
