[package]
name = "calculator"
version = "0.1.0"
authors = ["Maximilian Schoenenberg <e11931241@student.tuwien.ac.at>"]
edition = "2018"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.1"

[[bin]]
name = "main"

[profile.release]
opt-level = 3
lto = "fat"